--- a/quiz-front/src/app/app.html
+++ b/quiz-front/src/app/app.html
@@ -1,4 +1,6 @@
 <div class="app-container">
-  <h1 class="quiz-title">{{ title() }}</h1>
+  <a href="/" class="app-logo-link">
+    <img ngSrc="/quiz-cult-icon.detoure.png" alt="QuizCult Logo" class="app-logo" height="776" width="989">
+  </a>
   <router-outlet></router-outlet>
 </div>
