--- a/quiz-front/src/app/header/navbar.html
+++ b/quiz-front/src/app/header/navbar.html
@@ -1,6 +1,7 @@
 <nav class="navbar">
   <div class="navbar-left">
     <a routerLink="/home" routerLinkActive="active">🏠 Accueil</a>
+    <a routerLink="/themes" routerLinkActive="active"> 💡 Quiz</a>
     <a routerLink="/profile" routerLinkActive="active">👤 Profil</a>
     <a routerLink="/ranking" routerLinkActive="active">🎖️ Classement</a>
     @if (auth.isAdmin()) {
