--- a/quiz-front/src/app/quiz/quiz.html
+++ b/quiz-front/src/app/quiz/quiz.html
@@ -1,3 +1,4 @@
+<div class="quiz-page-wrapper">
 <div class="quiz-container card">
 
   <!-- Header du quiz avec titre, score et timer -->
@@ -76,4 +77,5 @@
 <!--      <button class="btn-primary" (click)="nextQuestion()">Question suivante</button>-->
 <!--    }-->
   }
+</div>
 </div>
