--- a/quiz-front/src/app/home/home.html
+++ b/quiz-front/src/app/home/home.html
@@ -1,5 +1,49 @@
 <div class="home-container">
-  <app-type-selection></app-type-selection>
+
+  <!-- Encart de présentation et lien GitHub (pour candidature) -->
+  <div class="presentation-card">
+    👋 <strong>Bonjour et bienvenue !</strong>
+    <br><br>
+    <strong>Développeur Java / Java Full Stack</strong> en recherche d’opportunités.
+    <br><br>
+    Récemment formé en développement Java, j’ai conçu de A à Z une <strong>application web de quiz de culture générale</strong> full-stack, de la conception à la mise en production avec hébergement et nom de domaine personnalisés.
+    <br><br>
+    Ce projet met en avant mes compétences en
+    <strong>Java, Spring Boot, microservices, Angular, Docker, MySQL, Spring Security</strong> et
+    <strong>CI/CD (GitLab)</strong>.
+    <br><br>
+    Passionné par le développement back-end et les architectures modernes, je souhaite mettre mes compétences au service d’une équipe dynamique et participer à la création de solutions innovantes.
+    <br><br>
+    Vous pouvez découvrir le projet sur GitHub et me contacter sur LinkedIn pour plus d'informations.
+    <br><br>
+    <strong>Bon jeu !</strong>
+
+    <!-- Conteneur pour les liens sociaux -->
+    <div class="links-container">
+
+      <!-- Lien GitHub -->
+      <a href="https://github.com/Letho13/Quiz" target="_blank" class="github-link social-link">
+        <span class="social-icon">
+          <!-- Icône de GitHub (SVG standard) -->
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.304.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.231.957-.266 1.983-.399 3.003-.404 1.02.005 2.045.138 3.003.404 2.291-1.553 3.299-1.231 3.299-1.231.652 1.652.241 2.873.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.61.795.572 4.757-1.579 8.199-6.075 8.199-11.375 0-6.627-5.373-12-12-12z"/></svg>
+        </span>
+        GitHub
+      </a>
+
+      <!-- Lien LinkedIn -->
+      <a href="https://www.linkedin.com/in/théotime-lebreton-5ba87368" target="_blank" class="linkedin-link social-link">
+        <span class="social-icon">
+          <!-- Icône de LinkedIn (SVG) -->
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.528-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+        </span>
+        LinkedIn
+      </a>
+
+    </div>
+  </div>
+
+  <!-- Bouton Commencer (navigation vers la page des thèmes) -->
+  <a [routerLink]="['/themes']" class="btn-start">
+    Commencer !
+  </a>
 </div>
-
-
